# binary_delivery_test

./: .gitignore  README.md
cmake/: binary_delivery.cmake  copy_config.cmake  copy_import.cmake  export-config.cmake.in
dll_for delivery/: CMakeLists.txt  main.cpp  main_dll.h
library_for_delivery/: CMakeLists.txt  library_for_delivery-config.cmake  main.cpp  main_lib.h
use_library/: CMakeLists.txt  main.cpp
use_library/cmake/: binary_delivery.cmake  external.CMakeLists.in
